Adicionando informações ao log

--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,6 @@
-server.name=SERVICOS_INTEGRACAO
+component_name=GI
+server.host_http=kiprevwebdev.caixaseguros.intranet
+server.environment=dev
 #server.interface.name=enp2s0
 server.outputfolder=/home/leandrofabricio/sniffer-lws/packates
 sniffer.active=true
