--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,11 @@
-component_name=GI
-server.host_http=kiprevwebdev.caixaseguros.intranet
+component_name=SERVER1
+server.host_http=sistema.intranet
 server.environment=dev
-#server.interface.name=enp2s0
-server.outputfolder=/home/leandrofabricio/sniffer-lws/packates
+#server.interface.name=Wi-Fi
+server.interface.ip=192.168.1.37
+server.outputfolder=C:\\Users\\Leandro\\
 sniffer.active=true
 sniffer.ports=80,8080,8081,8082,8083,8084,8085,8086,8087,8088,8089,8090
 sniffer.log.max_size_file=1
 sniffer.log.verbose=false
-sniffer.header.linkedkey=token_usuario
+sniffer.header.linkedkey=token
